src/objects/Note__c.object
<CustomObject>
    <fields>
        <fullName>BNF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BNF</label>
        <referenceTo>BNF2__c</referenceTo>
        <relationshipLabel>Notes</relationshipLabel>
        <relationshipName>Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MIBNF_Component__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MIBNF Component</label>
        <referenceTo>MIBNF_Component__c</referenceTo>
        <relationshipLabel>Notes</relationshipLabel>
        <relationshipName>Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MIBNF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MIBNF</label>
        <referenceTo>MIBNF2__c</referenceTo>
        <relationshipLabel>Notes</relationshipLabel>
        <relationshipName>Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Note</label>
    <nameField>
        <displayFormat>N-{0000}</displayFormat>
        <label>Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notes</pluralLabel>
    <recordTypes>
        <fullName>BNF_Note</fullName>
        <active>true</active>
        <label>BNF Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>MIBNF_Component_Note</fullName>
        <active>true</active>
        <label>MIBNF Component Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>MIBNF_Note</fullName>
        <active>true</active>
        <label>MIBNF Note</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>